Added Bootstrap and customizations

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,15 @@
-<h1>About us</h1>
-<p>We are working on our One Month Ruby Pinterest app!</P>
+<div class="page-header">
+  <h1>About us <small>We are working on our One Month Ruby Pinterest app!</small></h1>
+</div>
+<div class="row">
+  <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+    <div class="thumbnail">
+      <img data-src="public/ryobi.jpg">
+      <div class="caption">
+        <h3>Ryobi Sakuri</h3>
+        <p>Diligently, and methodically taking over the world…. one day at a time.</p>
+      </div>
+    </div>
+  </div>
+</div>
