--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,4 @@
-<h1>Welcome to my app!</h1>
-<p>Sign up <%=  link_to "here", "#" %>.</p>
+<div class="jumbotron">
+	<h1>Pinterested? Join the fun now!</h1>
+	<p><%=  link_to "Sign in", "#", class: "btn btn-primary btn" %> <%=  link_to "Sign up", "#", class: "btn btn-primary btn" %></p>
+</div>
