--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -3,7 +3,19 @@ $navbar-inverse-bg:			#4d482d;
 $navbar-inverse-link-color:		#f1c40f;
 $jumbotron-bg:   #f1c40f;
 $brand-primary:   #c0392b;
+$btn-default-bg: #006f03;
+$btn-default-color: #ecf0f1;
 $thumbnail-border:  #4d482d;
 $thumbnail-caption-color:   #4d482d;
+$navbar-height:   45px;
+
 
 @import 'bootstrap';
+
+.center {
+		text-align: center;
+}
+
+.navbar-brand {
+	font-weight: bold;
+}
