--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,7 @@
-<div class="jumbotron">
+ <div class="jumbotron center">
 	<h1>Pinterested? Join the fun now!</h1>
-	<p><%=  link_to "Sign in", "#", class: "btn btn-primary btn" %> <%=  link_to "Sign up", "#", class: "btn btn-primary btn" %></p>
+	<p>
+		<%=  link_to "Log in", "#", class: "btn btn-default btn" %> 
+		<%=  link_to "Sign up", "#", class: "btn btn-primary btn" %>
+	</p>
 </div>
