--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -1,4 +1,4 @@
-<%= render 'pages/home' if !user_signed_in? %>
+<%= render 'pages/home' unless user_signed_in? %>
 
 <div id="pins" class="transitions-enabled">
   <% @pins.each do |pin| %>
@@ -24,4 +24,8 @@
       </div>
     </div>
   <% end %>
+</div>
+
+<div class="center">
+  <%= will_paginate @posts, renderer: BootstrapPagination::Rails %>
 </div>
